# CodeGra.de

./: .coveragerc  .dockerignore  .eslintrc.js  .gitignore  Makefile  api.html  babel.config.js  building.html  code.html  config.py  developerdocs.html  genindex.html  http-routingtable.html  index.html  manage.py  npm-shrinkwrap.json  objects.inv  package.json  py-modindex.html  requirements.txt  running.html  search.html  searchindex.js  setup.cfg  test_requirements.txt  tsconfig.json
api_libs/python/codegrade/: README.md  pyproject.toml
api_libs/python/codegrade/codegrade/: __init__.py  client.py  errors.py  utils.py
api_libs/python/codegrade/codegrade/api/: __init__.py  about.py  assignment.py  auto_test.py  course.py  group.py  site_settings.py  user.py  user_setting.py
api_libs/python/codegrade/codegrade/async_api/: __init__.py  about.py  assignment.py  auto_test.py  course.py  group.py  site_settings.py  user.py  user_setting.py
api_libs/python/codegrade/codegrade/models/: __init__.py  _fixture_like.py  about_as_json.py  abstract_role_as_json.py  api_codes.py  assignment_as_json.py  assignment_done_type.py  assignment_kind.py  assignment_peer_feedback_settings_as_json.py  assignment_state_enum.py  auto_test_as_json.py  auto_test_fixture_as_json.py  auto_test_result_as_extended_json.py  auto_test_result_as_json.py  auto_test_run_as_extended_json.py  auto_test_run_as_json.py  auto_test_set_as_json.py  auto_test_step_base_as_json.py  auto_test_step_base_as_json_base.py  auto_test_step_base_input_as_json.py  auto_test_step_result_as_json.py  base_error.py  (+75 more)
(+670 files in other folders)
