[tool.poetry]
name = "codegrade"
version = "v1"
description = "A client library for accessing CodeGrade"

authors = []

readme = "README.md"
packages = [
    {include = "codegrade"},
]
include = ["CHANGELOG.md", "codegrade/py.typed"]


[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.13.3"

[tool.black]
line-length = 120
target_version = ['py38']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"